# AIALRA-TTS

./: .env.example  .gitignore  00_audit_env.ps1  01_smoke_test.ps1  02_process_one.ps1  03_process_all.ps1  04_open_report.ps1  05_start_webui.ps1  06_worker_heartbeat.ps1  07_worker_poll.ps1  08_deploy_check.ps1  09_worker_healthcheck.ps1  10_release_check.ps1  11_remote_smoke.ps1  12_platform_check.ps1  13_start_worker.ps1  14_manage_worker_task.ps1  15_manage_batch_chunk.ps1  16_manage_batch_supervisor.ps1  DEPLOY_CONTABO_PROMPT.md  README.md  RELEASE.md  SECURITY.md  config.example.yaml  healthcheck_tts.ps1  install_worker_heartbeat_task.ps1  install_worker_poll_task.ps1  install_worker_task.ps1  licenses_report.md  pyproject.toml  requirements.txt  setup.ps1  setup_wsl_or_docker.md  start_tts_server.ps1  stop_tts_server.ps1
deploy/: CONTABO_DEPLOY_PROMPT.md  Caddyfile.example  Dockerfile.web  REMOTE_TUNNEL_GUIDE.md  bootstrap_contabo.py  config.remote.example.yaml  docker-compose.yml  nginx.conf.example
prompts/: coherence_pass.md  compression.md  consistency_check.md  dialect_rewrite.md  fidelity_check.md  fidelity_repair.md  glossary_extract.md  lecture_rewrite.md  style_guide.md  translate_literal.md
tests/: conftest.py  test_artifacts.py  test_capabilities.py  test_config_env.py  test_deploy_bootstrap.py  test_deploy_check.py  test_glossary.py  test_job_config.py  test_llm_local.py  test_metrics.py  test_platform_check.py  test_platform_store.py  test_progress_checklist.py  test_release_check.py  test_remote_smoke.py  test_report.py  test_resume_skip.py  (+13 more)
(+51 files in other folders)
